feat: register user and activate
